# bitcoin-like-blockchain

./: DOCUMENTACAO.md  LICENSE  README.md  main.py  pyproject.toml
